--- a/websitestyle.css
+++ b/websitestyle.css
@@ -9,7 +9,7 @@
 .org{
     height: 100vh;
     width: 100%;
-    background-image: url(back.jpg);
+    background-image: url("back.jpg");
     background-size: cover;
     background-position: center;
 }
