--- a/websitestyle.css
+++ b/websitestyle.css
@@ -271,6 +271,50 @@ h5{
     
 
 }
+.why-me {
+    width: 100%;
+    padding: 100px 0px;
+    background-color: #191919;
+}
+
+.why-me .main {
+    width: 1130px;
+    max-width: 95%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: left;
+}
+
+.video-container {
+    width: 50%;
+}
+
+.video-container video {
+    width: 100%;
+}
+
+.why-me-text {
+    width: 50%;
+    text-align: left;
+    color: white;
+    padding-left: 50px;
+}
+
+.why-me-text h2 {
+    color: white;
+    font-size: 40px;
+    margin-bottom: 20px;
+}
+
+.why-me-text p {
+    color: grey;
+    letter-spacing: 1px;
+    line-height: 28px;
+    font-size: 18px;
+    margin-bottom: 45px;
+}
+
 .contact-me{
     width: 100%;
     height: 290px;
@@ -329,6 +373,8 @@ footer p:nth-child(2){
     line-height: 26px;
 
 }
+
+
 
 .social{
     display: flex;
@@ -401,6 +447,7 @@ footer p:nth-child(2){
     
 
 }
+
 
 
 
